--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
   
   <canvas class="webgl"></canvas>
 
-  <script type="module" src="/app.ts"></script>
+  <!-- <script type="module" src="/setup.ts"></script> -->
+  <script type="module" src="/basic_example.ts"></script>
 
 </body>
 </html>
