--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <canvas class="webgl"></canvas>
 
   <!-- <script type="module" src="/setup.ts"></script> -->
-  <script type="module" src="/basic_example.ts"></script>
+  <!-- <script type="module" src="/basic_example.ts"></script> -->
+  <script type="module" src="/contact_material.ts"></script>
 
 </body>
 </html>
