--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
 
   <!-- <script type="module" src="/setup.ts"></script> -->
   <!-- <script type="module" src="/basic_example.ts"></script> -->
-  <script type="module" src="/contact_material.ts"></script>
+  <!-- <script type="module" src="/contact_material.ts"></script> -->
+  <script type="module" src="/contact_material_default.ts"></script>
 
 </body>
 </html>
