--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,8 @@
   <!-- <script type="module" src="/setup.ts"></script> -->
   <!-- <script type="module" src="/basic_example.ts"></script> -->
   <!-- <script type="module" src="/contact_material.ts"></script> -->
-  <script type="module" src="/contact_material_default.ts"></script>
+  <!-- <script type="module" src="/contact_material_default.ts"></script> -->
+  <script type="module" src="/apply_forces.ts"></script>
 
 </body>
 </html>
