--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,8 @@
   <!-- <script type="module" src="/basic_example.ts"></script> -->
   <!-- <script type="module" src="/contact_material.ts"></script> -->
   <!-- <script type="module" src="/contact_material_default.ts"></script> -->
-  <script type="module" src="/apply_forces.ts"></script>
+  <!-- <script type="module" src="/apply_forces.ts"></script> -->
+  <script type="module" src="/handle_multiple_objects.ts"></script>
 
 </body>
 </html>
