--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
   <!-- <script type="module" src="/contact_material.ts"></script> -->
   <!-- <script type="module" src="/contact_material_default.ts"></script> -->
   <!-- <script type="module" src="/apply_forces.ts"></script> -->
-  <script type="module" src="/handle_multiple_objects.ts"></script>
+  <!-- <script type="module" src="/handle_multiple_objects.ts"></script> -->
+  <!-- <script type="module" src="/optimize.ts"></script> -->
+  <script type="module" src="/adding_boxes.ts"></script>
+
 
 </body>
 </html>
