--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
   <!-- <script type="module" src="/handle_multiple_objects.ts"></script> -->
   <!-- <script type="module" src="/optimize.ts"></script> -->
   <!-- <script type="module" src="/adding_boxes.ts"></script> -->
-  <script type="module" src="/box_rotation.ts"></script>
+  <!-- <script type="module" src="/box_rotation.ts"></script> -->
+  <script type="module" src="/performance.ts"></script>
 
 
 </body>
