--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,8 @@
   <!-- <script type="module" src="/optimize.ts"></script> -->
   <!-- <script type="module" src="/adding_boxes.ts"></script> -->
   <!-- <script type="module" src="/box_rotation.ts"></script> -->
-  <script type="module" src="/performance.ts"></script>
+  <!-- <script type="module" src="/performance.ts"></script> -->
+  <script type="module" src="/events.ts"></script>
 
 
 </body>
