--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
   <!-- <script type="module" src="/adding_boxes.ts"></script> -->
   <!-- <script type="module" src="/box_rotation.ts"></script> -->
   <!-- <script type="module" src="/performance.ts"></script> -->
-  <script type="module" src="/events.ts"></script>
+  <!-- <script type="module" src="/events.ts"></script> -->
+  <script type="module" src="/remove_things.ts"></script>
 
 
 </body>
