--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,8 @@
   <!-- <script type="module" src="/box_rotation.ts"></script> -->
   <!-- <script type="module" src="/performance.ts"></script> -->
   <!-- <script type="module" src="/events.ts"></script> -->
-  <script type="module" src="/remove_things.ts"></script>
+  <!-- <script type="module" src="/remove_things.ts"></script> -->
+  <script type="module" src="/go_further_with_cannon.ts"></script>
 
 
 </body>
